# prednet_in_pytorch

./: README.rst  convlstmcell.py  csv_serializer.py  dataset.py  ext_tensorboard_imgs.py  generate_image.py  generate_spectrum.py  image_crop_walker.py  main.py  prednet.py  pyproject.toml
data/: test_list.txt
